# bosperrus-package

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml  publish.yml
bosperrus/: __init__.py  centrality_measures.py  distances.py  evaluate_fit.py  fit.py  graph_construction.py  pipeline.py
bosporus/: __init__.py  centrality_measures.py  distances.py  evaluate_fit.py  fit.py  graph_construction.py  pipeline.py
tests/: test_distances.py  test_evaluate_fit.py  test_fit.py  test_graph_construction.py  test_pipeline.py
