[project]
name = "bosperrus"
version = "0.1.0"
authors = [
  { name="Anna Moeller", email="anna.moeller@fau.de" },
]
requires-python = ">=3.9"
description = "Boundary effects in spatial graphs: error modeling and untangling strategies"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["scikit-learn",
                "scipy",
                "numpy",
                "pandas",
                "networkx"]

[project.optional-dependencies]
dev = ["pytest"]
graph = ["graph-tool"] # this will fail, only to document intent
alphashape = ["alphashape", "shapely"]

[project.urls]
Homepage = "https://github.com/bionetslab/bosperrus-package"
Issues = "https://github.com/bionetslab/bosperrus-package/issues"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.uv.workspace]
members = [
    "bosperrus-package",
]
